# Go-Incubate

./: .gitignore  README.md  go.mod  go.sum  singularity.md
Deployment-WebRTC/goconsumer/: docker-compose.yml  main.go  message.go
Deployment-WebRTC/goproducer/: docker-compose.yml  dockerfile  go.mod  go.sum  main.go
Deployment-WebRTC/govideo/: docker-compose.yml
Deployment-WebRTC/rtc/: go.mod  main.go
Deployment-WebRTC/tfemonet/: facial-expression-recognition-from-stream.py
Deployment-WebRTC/tfsemonet/: dockerfile
Deployment-WebRTC/tfserving/: docker-compose.yml
Deployment-WebRTC/webRTC/: docker-compose.yml  dockerfile  go.mod  go.sum  main.go  questions.md
Deployment-WebRTC/webrtc/: docker-compose.yml  dockerfile  go.mod  go.sum  main.go
Dictionary/: Dockerfile
Documents/: Train in python and infer in Golang.md
GoReadStdin/: main.go
Kafka/: Docker-compose.yml
KafkaToMongo/: Docker-compose.yml
MongoDB/: Docker-compose.yml
RestToKafka/: .env  Docker-compose.yml  handlers.go  kafka.go  main.go
RestToKafka2/: .env  Docker-compose.yml  Dockerfile  handlers.go  main.go
SyncWaitGroup/: main.go
adai/: _config.yml
adai/_pages/: portfolio-archive.md
adai/_portfolio/: artifical_intelligence_ansaf_salleb-aouissi.md
adaickalavan.github.io/: Gemfile  _config.yml
adaickalavan.github.io/_portfolio/: deep_learning_ai_andrew_ng.md
bytes/: chunk.go
consumerGolang/: .env  Docker-compose.yml  main.go
consumerMongo/: Docker-compose.yml  main.go
consumerPython/: .env  Docker-compose.yml  main.py  requirements.txt
consumerPython/kafkapc_python/: __init__.py
consumerPython/main/: main.py
consumer_golang/: Docker-compose.yml  main.go
consumer_mongo/: .env  docker-compose.yml  dockerfile  handlers.go  main.go
consumer_python/: Docker-compose.yml  Dockerfile  main.py  requirements.txt
consumer_python/kafkapc/: __init__.py
consumer_python/kafkapc_python/: __init__.py
consumer_python/main/: main.py
consumerpython/: test.py
cpp/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  main.cpp
cpp/src/: main  main.cpp
cppdocu/: CMakeLists.txt
cppdocu/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
cppdocu/docs/html/: annotated.html  classes.html  dir_07c2df013bb20677b8e65a9f18968d2c.html  files.html  functions.html  functions_func.html  structtutorial-members.html  structtutorial.html  tutorial_8h_source.html
cppdocu/docs/html/search/: all_0.js  all_1.js
cppdocu/docs/latex/: annotated.tex  dir_07c2df013bb20677b8e65a9f18968d2c.tex  refman.tex  structtutorial.tex
cppdocu/libs/tutorial/: CMakeLists.txt  tutorial.c  tutorial.h
cppdocu/tutorial/: CMakeLists.txt  tutorial.cpp  tutorial.h
cvideoingest/: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists11.txt  Dockerfile  docker-compose.yml
cvideoingest/include/: foo.h
cvideoingest/libs/foo/: CMakeLists.txt  foo.cpp  foo1.cpp
cvideoingest/src/: CMakeLists78.txt
cvideoingest/src/foo/: CMakeLists.txt  foo.cpp
cvideoingest/src/main/: main.cpp
database/: connection.go  dictionary.go
document/: matrix.go  word.go
gitlab/emotion-recognition/: README.md
gitlab/scalable-deployment/: .gitlab-ci.yml  CODE_OF_CONDUCT.md  README.md  (+1 more)
goconsumer/: Docker-compose.yml  Gopkg.toml  main.go
goconsumermongo/: Docker-compose.yml  main.go
goinfluxdbgrafana/: Docker-compose.yml  Dockerfile  main.go
gokafka/: Docker-compose.yml  Dockerfile  kafka-producer-confluent.go  main.go
goproducer/: Docker-compose.yml  Dockerfile  main.go
goproducerrest/: Docker-compose.yml  handlers.go  main.go
goproducerrtsp/: Docker-compose.yml  Dockerfile  Gopkg.toml  main.go
goproducerrtsp1/: main.go
goproducerrtspsim/: Docker-compose.yml
gotimeseries/: .env  Demo-1544380461642.json  Demo-1544382175009.json  Docker-compose.yml  Gopkg.toml  main.go
hpc/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  appConfig.h.in  docker-compose.yml
hpc/apps/: CMakeLists.txt  linked.c  main.cpp  mandel.c  pi_mc.c  prodCons.c  trial.c  tutorial.cpp
hpc/include/: computepi.h  lec03_01_computePi.h  lec04_07_computePi.h  slide38.h
hpc/libs/computepi/: CMakeLists.txt  computepi.cpp
hpc/libs/foo/: CMakeLists.txt  foo1.cpp
hpc/libs/helloworld/: CMakeLists.txt
hpc/libs/lec03/: CMakeLists.txt  lec03_01_computePi.cpp
hpc/libs/lec03_01_computePi/: computepi.cpp
hpc/libs/lec04/: CMakeLists.txt  lec04_07_computePi.cpp
hpc/libs/random/: CMakeLists.txt  random.c  test12.c  test12.h
hpc/libs/slide38/: CMakeLists.txt  slide38.cpp
hpc/libs/trialRandom/: CMakeLists.txt  trial.h
hpc/src/main/: main.cpp
influxdbgrafana/: Docker-compose.yml
kafka_zookeeper_mongo/: docker-compose.yml
kafkapc/: kafka-consumer.go  kafka-producer.go
kafkapc_python/: __init__.py
kafkazookeepermongo/: Docker-compose.yml
keyenceClient/: main.go
keyenceServer/: main.go
mpi/: CMakeLists.txt  README.md  docker-compose.yml
mpi/apps/: CMakeLists.txt  hello.c  jordan.c  pingpong.c  prime.c  randommax.c  sumsquares.c  tutorial.c
nginx/: Dockerfile  nginx.conf
old/: docker-compose.yml  main.go
opencv/: Docker-compose.yml  main.py
producerGolang/: Docker-compose.yml  main.go
producerPython/: Docker-compose.yml  Dockerfile
producerRest/: Docker-compose.yml  main.go
producer_golang/: Docker-compose.yml  main.go
producer_python/: docker-compose.yml  dockerfile  instructions.md  main.py  requirements.tx  requirements.txt
producer_rest/: .env  docker-compose.yml  dockerfile  handlers.go  main.go
producer_sensor/: Docker-compose.yml  main.go
prometheusgrafana/: Docker-compose.yml  main.go
pyconsumerrtsp/: .env  main.py
pyconsumerrtsp2/: .env  main.py
pyconsumerrtsp_2/: Docker-compose.yml  main.py
pyproducer/: Docker-compose.yml
pythongui/: Docker-compose.yml
reference/: DataPipeline.pptx  cppCommands.md  instructions.md  ~$DataPipeline.pptx
rpcclient/: RPCclient.go
rpcserver/: RPCserver.go
rtsp/: main.go
rtsp-gocv/: Dockerfile  main.go
rtspgocv/: Docker-compose.yml  Dockerfile  main.go
timeseriesdb/: client.go
zookeeper/: Docker-compose.yml
(+97 files in other folders)
